fix: general code cleanup for imports and formatting
