# documents/trashbin/trashbin.routes.js
@@ -33,23 +33,23 @@ trashbinRouter.use(
 );
 
 // route to return all items in trashbin
-trashbinRouter.get("/:workspaceId/trash", getAllTrashbins);
+trashbinRouter.get("/:workspaceId/drive/trash", getAllTrashbins);
 
 // Route for moving folders and files to trash
-trashbinRouter.patch("/:workspaceId/trash/move", moveFoldersAndFilesToTrash);
+trashbinRouter.patch("/:workspaceId/drive/trash/move", moveFoldersAndFilesToTrash);
 
 // Route for restoring folders and files from trash
 trashbinRouter.patch(
-  "/:workspaceId/trash/restore",
+  "/:workspaceId/drive/trash/restore",
   restoreFoldersAndFilesFromTrash
 );
 
 // Route for deleting specific folders and files from trash
 trashbinRouter.delete(
-  "/:workspaceId/trash/delete",
+  "/:workspaceId/drive/trash/delete",
   deleteSelectedFoldersAndFiles
 );
 // Route for restoring folders and files from trash
-trashbinRouter.delete("/:workspaceId/trash/empty", emptyTrashBin);
+trashbinRouter.delete("/:workspaceId/drive/trash/empty", emptyTrashBin);
 
 export default trashbinRouter;
